--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ async-timeout==4.0.2
 attrs==22.2.0
 cffi==1.15.1
 charset-normalizer==2.1.1
-discord.py==2.1.0
+discord==2.2.2
+discord.py==2.2.2
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
 pycparser==2.21
 PyNaCl==1.5.0
-python-dotenv==0.21.0
+python-dotenv==1.0.0
 pytube==12.1.2
 yarl==1.8.2
