--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
+anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
+certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
 discord==2.2.2
 discord.py==2.2.2
 frozenlist==1.3.3
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
 idna==3.4
+innertube==2.1.3
+mediate==0.1.8
 multidict==6.0.4
 pycparser==2.21
 PyNaCl==1.5.0
 python-dotenv==1.0.0
 pytube==12.1.2
+rfc3986==1.5.0
+roster==0.1.11
+sniffio==1.3.0
 yarl==1.8.2
