--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
+Brotli==1.0.9
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -13,14 +14,16 @@ h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
-innertube==2.1.3
 mediate==0.1.8
 multidict==6.0.4
+mutagen==1.46.0
 pycparser==2.21
+pycryptodomex==3.17
 PyNaCl==1.5.0
 python-dotenv==1.0.0
-pytube==12.1.2
 rfc3986==1.5.0
 roster==0.1.11
 sniffio==1.3.0
+websockets==10.4
 yarl==1.8.2
+yt-dlp==2023.3.4
