--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,18 @@
-aiohttp==3.8.3
+aiohttp==3.9.0b0
 aiosignal==1.3.1
-anyio==3.6.2
-async-timeout==4.0.2
-attrs==22.2.0
-Brotli==1.0.9
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-discord==2.2.2
-discord.py==2.2.2
-frozenlist==1.3.3
-h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
+attrs==23.1.0
+Brotli==1.1.0
+certifi==2023.7.22
+cffi==1.16.0
+discord.py==2.3.2
+frozenlist==1.4.0
 idna==3.4
-mediate==0.1.8
 multidict==6.0.4
-mutagen==1.46.0
+mutagen==1.47.0
 pycparser==2.21
-pycryptodomex==3.17
+pycryptodomex==3.19.0
 PyNaCl==1.5.0
 python-dotenv==1.0.0
-rfc3986==1.5.0
-roster==0.1.11
-sniffio==1.3.0
-websockets==10.4
-yarl==1.8.2
-yt-dlp==2023.3.4
+websockets==12.0
+yarl==1.9.2
+yt-dlp==2023.10.13
